# snowflake_demo

./: dbt_project.yml  profiles.yml  pyproject.toml
.github/workflows/: dbt_workflow.yml
models/example/: my_first_dbt_model.sql
